src/scss/nav/theme-tools.scss
.o-ft-header__nav--tools-theme {
    @extend %o-hierarchical-nav--horizontal-theme;
    min-width: 45px;
    height: 80px;
    white-space: nowrap;
    overflow: hidden;

    [data-o-hierarchical-nav-level='1'] {
        & > [aria-controls] > a,
        & > .o-hierarchical-nav__parent > a {
            padding-right: 0;
            background-image: none;

            // Default icon style is inline-block, but the icon should appear on top of the label
            i {
                display: block;
            }
        }

        & > li {
            display: -webkit-inline-flex;
            display: -webkit-inline-box;
            display: -ms-inline-flexbox;
            display: inline-flex;

            -webkit-box-align: center;
            -webkit-align-items: center;
            -ms-flex-align: center;
            align-items: center;

            height: 80px;

            &[aria-selected="true"] > a {
                color: oColorsGetColorFor(header-item, text);
                opacity: 0.7;
            }

            & > a {
                display: inline-block;
                border-left: 1px solid #666666;
                width: 45px;
                height: 45px;
                font-size: 11px;
                text-align: center;
                /* Would need to add as fallback for IE8 and IE9
                margin-top: 17px; */
            }
        }
    }

    [data-o-hierarchical-nav-level]:not([data-o-hierarchical-nav-level='1']) {
        top: 80px;
        right: 0;

        a {
            padding: 10px 20px;
            font-size: 14px;
        }
    }
}

@include oGridRespondTo(S) {
    .o-ft-header__nav--tools-theme {
        width: 46px;
    }
}

@include oGridRespondTo(M) {
    .o-ft-header__nav--tools-theme {
        width: 92px;
    }
}

@include oGridRespondTo(L XL) {
    .o-ft-header__nav--tools-theme {
        width: 184px;
    }
}

